vlib/v/parser/tests/generic_struct_parameter_err.out
vlib/v/parser/tests/generic_struct_parameter_err.vv:10:17: error: generic struct parameter name needs to be exactly one char
    8 | struct MyContainer<T> {
    9 | mut:
   10 |     lst LinkedList<MyNode<T>>
      |                    ~~~~~~~~~
   11 | }
   12 |
